@@ -1,3 +1,5 @@
+2014-02-09 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
+  * fixed Oval::Match#validate to handle non-string TypeError
 2014-02-08 Pawel Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.0.6
   * documented a way for validating arbitrary arguments
